# libfond

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: fond.c  fond.h  fond_buffer.c  fond_common.c  fond_common.h  fond_internal.h  fond_windows.c  fond_windows.h  utf8.h
src/shader/: to_texture.frag  to_texture.vert
test/: test.c
